# MetalLib

./: .gitignore  .gitmodules  CMakeLists.txt  COMPUTE_SHADERS.md  MSAA_GUIDE.md  Makefile  OBJECTS_WITH_LIGHTING.md  README.md  debug_shader_fail.lldb  mac.h  mac.m  mac_delegate.h  mac_delegate.m  mac_error.h  mac_events.h  mac_events.m  mac_init.h  mac_pixels.h  mac_pixels.m  mac_video.h  mac_video.m  mac_view.h  mac_view.m  mac_window.h  mac_window.m  main  main.c  main.cpp  maths.c  maths.h  matrices.h  mkl.pc.in  todolist.txt
App/: main.c
MAC/include/: mac_error.h  mac_view.h
MAC/include/MAC/: mac.h  mac_button.h  mac_colors.h  mac_delegate.h  mac_error.h  mac_gui.h  mac_init.h  mac_internals.h  mac_pixels.h  mac_shapes.h  mac_slider.h  mac_video.h  mac_view.h  mac_window.h
MAC/src/: mac.c  mac.m  mac_delegate.m  mac_error.c  mac_events.m  mac_gui.m  mac_pixels.m  mac_video.m  mac_view.m  mac_window.m
MAC/src/GUI/: mac_button.m  mac_slider.m
MAC/src/Graphics/: mac_shapes.m  mac_view.m
MACA/include/MACA/: mac_button.h  mac_buttons.h  mac_colors.h  mac_defs.h  mac_delegate.h  mac_devices.h  mac_error.h  mac_events.h  mac_gui.h  mac_init.h  mac_internals.h  mac_metal.h  mac_render.h  mac_renderer.h  mac_shapes.h  mac_slider.h  mac_sliders.h  mac_tables.h  mac_text.h  mac_video.h  mac_view.h  mac_window.h  maca.h
MACA/src/: mac_delegate.m  mac_devices.m  mac_error.c  mac_events.m  mac_init.m  mac_pixels.m  mac_text.m  mac_video.m  mac_window.m  maca.c
MACA/src/GUI/: mac_button.m  mac_slider.m
MACA/src/Graphics/: mac_metal.m  mac_renderer.c  mac_shapes.m  mac_view.m
MACA/src/Gui/: mac_buttons.m  mac_sliders.m  mac_tables.m
MCL/: delegate.h  delegate.m  main  shapes.m  view.m  window.h
MCL/include/MCL/: MCL.h  colors.h  date_time.h  defs.h  delegate.h  errors.h  events.h  frame.h  metal.h  shapes.h  view.h  window.h
MCL/include/MCL/graphics/: renderer.h  scene.h  shapes.h
MCL/include/MCL/gui/: buttons.h  labels.h  sliders.h  stack.h  table.h  text.h  textbox.h
MCL/src/: date_time.c  delegate.m  events.m  frame.m  metal.m  shaders.metal  shapes.m  view.m  window.m
MCL/src/graphics/: Shaders.metal  rdefs.h  renderer.m  scene.m  shapes.m
MCL/src/gui/: buttons.m  labels.m  sliders.m  stack.m  table.m  text.m  textbox.m
MCL/src/math/: linear_algebra.m
MCL/src/mcl_sys/: cpu.m  gpu.m  sys_info.m
MCL2/include/MCLCore/: MCLApplication.h
MCL2/src/: MCLApplication.m
MCL2/src/MCLCore/: MCLApplication.m  MCLEvents.m  MCLView.m  MCLWindow.m
MCL2/src/MCLGui/: MCLButtons.m  MCLStackView.m
MIA/include/MIA/: buttons.h  delegate.h  events.h  init.h  internals.h  m_defs.h  m_devices.h  m_view.h  m_window.h  mia.h  sliders.h  tables.h  text.h  view.h
MIA/src/: delegate.m  devices.m  events.m  m_delegate.m  m_devices.m  m_init.m  m_view.m  m_window.m  text.m  view.m  window.m
MIA/src/Gui/: buttons.m  sliders.m  tables.m
MKL/src/: MAplication.m  MApplication.h  MColor.h  MDefs.h  MError.c  MError.h  MEvent.h  MEvent.m  MKL.h  MKLColors.h  MKLCore.h  MKLCore.m  MKLDefs.h  MKLError.c  MKLError.h  MKLUtils.h  MKLUtils.m  MKLWindow.h  MKLWindow.m  MView.h  MView.m
MKL/src/Core/: MKLConfig.h  MKLCore.h  MKLDefaults.h  MKLError.c  MKLError.h  MKLError.m  MKLPath.h  MKLTimer.c  MKLTimer.h  MKLTimer.m
MKL/src/Graphics/: MKLAnimation.h  MKLAnimation.m  MKLColors.h  MKLCommandBuffer.h  MKLCommandBuffer.m  MKLCompute.h  MKLCompute.m  MKLLibraries.h  MKLLibraries.m  MKLLight.h  MKLLight.m  MKLMaterial.h  MKLMaterial.m  MKLMetal3.h  MKLMetal3.m  MKLPerformanceMonitor.c  MKLPerformanceMonitor.h  MKLRenderTarget.h  MKLRenderTarget.m  MKLRenderer.h  MKLRenderer.m  MKLShader.h  MKLShader.m  MKLText.h  MKLText.m  MKLTexture.h  MKLTexture.m  MKLTypes.h  MKLTypes.m
MKL/src/Input/: KeyCodes.h  Keyboard.c  Keyboard.h  Keyboard.m  MKLInput.h  MKLInput.m  Mouse.c  Mouse.h  Mouse.m
MKL/src/Math/: MKLMath.c  MKLMath.h
MKL/src/Objects/: MKLEntity.c  MKLEntity.h  MKLMesh.h  MKLMesh.m  MKLObjects.h  MKLObjects.m  MKLShapes.h  MKLShapes.m
MKL/src/Renderer/: MKLLibraries.h  MKLLibraries.m  MKLRenderer.h  MKLRenderer.m  MKLShapes.h  MKLShapes.m  MKLTypes.h  MKLView.h  MKLView.m
MKL/src/Shaders/: Shaders.metal
chess_engine_js/: README.md  chessBoard.js  index.js  pieces.js
chess_engine_js/src/: chessBoard.d.ts  chessBoard.js  pieces.d.ts  pieces.js
chess_engine_py/: chessBoard.py
examples/: README.md  a.out  ex1  ex1.c  main  main.c  shadertoy.metal  test_light_api.c  test_lighting.c  test_new_features.c  test_obj_model.c  test_shadertoy.c  test_shapes.c  test_texture_api.c  test_waving_cubes.c
examples/01_basics/: camera_controls.c
examples/02_graphics/: shapes_demo.c
examples/03_lighting/: lighting_demo.c
examples/04_advanced/: camera_modes.c
examples/06_models/: obj_viewer.c
examples/basic/: main  main.c
examples/benchmark/: rendering_benchmark.c  unlimited_fps_benchmark.c
examples/compute/: README.md  compute_example.c  compute_shader.metal
examples/core_graphics/: main.c  main2.c  main_m  main_ms  move_shape.c
examples/gui/: main_t  main_tc  tables.c
examples/instancing/: instanced_rendering.c
examples/shaders/: ripple.frag.glsl  ripple.metal  ripple.vert.glsl
examples/shadertoy/: shadertoy.c  shadertoy.metal
examples/text_change/: main_tc  text_change.c
include/guli/: guli.h  guli_defines.h
include/guli/Core/: guli_core.h  guli_error.h  guli_file.h  guli_hash.h  guli_image.h  guli_window_backend.h
include/guli/Graphics/: guli_graphics.h  guli_shader.h  guli_shader_defines.h  guli_texture.h
src/: MApp.h  MApp.m  MColor.h  MDL.h  MDefs.h  MError.h  MTLC.h  MTLCDefs.h  MTLCError.c  MTLCEvents.m  MTLCMath.c  MTLCTimer.c  MTLCWindow.h  MTLCWindow.m  MView.h  MView.m  MWindow.h  MWindow.m
src/Core/: guli_core.c  guli_error.c  guli_file.c  guli_image.c
src/Graphics/: guli_texture.c
src/Graphics/Metal/: guli_metal.m  guli_metal_shader.m  guli_metal_texture.m
src/Graphics/OpenGL/: guli_gl.c  guli_gl_shader.c  guli_gl_texture.c
src/Include/: MTLC.h  MTLCError.h  MTLCEvents.h  MTLCTimer.h
src/Include/Math/: MTLCMath.h
(+33 files in other folders)
